--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main__pages-css/welcome__page.css">
+  <link rel="stylesheet" href="./css/main__pages-css/welcome__page.css">
   <title>Welcome</title>
 </head>
 
