--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main__pages-css/service_page_main.css">
+  <link rel="stylesheet" href="./css/main__pages-css/service_page_main.css">
   <title>Services</title>
 </head>
 
@@ -15,15 +15,15 @@
       <div class="container top-line__container">
         <header class="top-line__header header">
           <div class="header__column">
-            <a href="/index.html" class="header__logo logo">
-              <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+            <a href="./index.html" class="header__logo logo">
+              <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="header__menu menu">
               <ul class="menu__list">
-                <li class="menu__item"> <a href="/main__page.html" class="menu__link">Главная</a></li>
-                <li class="menu__item   menu_active_item"> <a href="/service.html" class="menu__link">Услуги</a>
+                <li class="menu__item"> <a href="./main__page.html" class="menu__link">Главная</a></li>
+                <li class="menu__item   menu_active_item"> <a href="./service.html" class="menu__link">Услуги</a>
                 </li>
-                <li class="menu__item"> <a href="/review.html" class="menu__link">Отзывы</a></li>
+                <li class="menu__item"> <a href="./review.html" class="menu__link">Отзывы</a></li>
               </ul>
             </nav>
           </div>
