ещё поправил пути

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="wrapper welcome__page-wrapper">
     <main class="welcome__content">
       <div class="welcome__items">
-        <img src="/img/logo-vertical.png" alt="welcome__logo" class="welcome__logo-img">
-        <a href="/main__page.html" class="btn btn__welcome">Войти</a>
+        <img src="./img/logo-vertical.png" alt="welcome__logo" class="welcome__logo-img">
+        <a href="./main__page.html" class="btn btn__welcome">Войти</a>
       </div>
     </main>
   </div>
