--- a/main__page.html
+++ b/main__page.html
@@ -15,15 +15,15 @@
       <div class="container hero__container">
         <header class="hero__header header">
           <div class="header__column">
-            <a href="/index.html" class="header__logo logo">
-              <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+            <a href="./index.html" class="header__logo logo">
+              <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="column__menu menu">
               <ul class="menu__list">
-                <li class="menu__item menu_active_item"> <a href="/main__page.html" class="menu__link">Главная</a>
+                <li class="menu__item menu_active_item"> <a href="./main__page.html" class="menu__link">Главная</a>
                 </li>
-                <li class="menu__item"> <a href="/service.html" class="menu__link">Услуги</a></li>
-                <li class="menu__item"> <a href="/review.html" class="menu__link">Отзывы</a></li>
+                <li class="menu__item"> <a href="./service.html" class="menu__link">Услуги</a></li>
+                <li class="menu__item"> <a href="./review.html" class="menu__link">Отзывы</a></li>
               </ul>
             </nav>
           </div>
