--- a/review.html
+++ b/review.html
@@ -61,7 +61,7 @@
             <div class="review__header">
               <div class="review__photo">
                 <div class="avatar">
-                  <img src="/img/content/reviews/ginger.jpg" alt="ginger" class="avatar__img">
+                  <img src="./img/content/reviews/ginger.jpg" alt="ginger" class="avatar__img">
                 </div>
               </div>
               <div class="review__userdata">
@@ -88,7 +88,7 @@
             <div class="review__header">
               <div class="review__photo">
                 <div class="avatar">
-                  <img src="/img/content/reviews/liza.jpg" alt="ginger" class="avatar__img">
+                  <img src="./img/content/reviews/liza.jpg" alt="ginger" class="avatar__img">
                 </div>
               </div>
               <div class="review__userdata">
@@ -114,7 +114,7 @@
             <div class="review__header">
               <div class="review__photo">
                 <div class="avatar">
-                  <img src="/img/content/reviews/girl.jpg" alt="ginger" class="avatar__img">
+                  <img src="./img/content/reviews/girl.jpg" alt="ginger" class="avatar__img">
                 </div>
               </div>
               <div class="review__userdata">
@@ -143,7 +143,7 @@
             <div class="review__header">
               <div class="review__photo">
                 <div class="avatar">
-                  <img src="/img/content/reviews/guy.jpg" alt="ginger" class="avatar__img">
+                  <img src="./img/content/reviews/guy.jpg" alt="ginger" class="avatar__img">
                 </div>
               </div>
               <div class="review__userdata">
