--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         <header class="top-line__header header">
           <div class="header__column">
             <a href="./index.html" class="header__logo logo">
-              <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
+              <img src="../img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="header__menu menu">
               <ul class="menu__list">
@@ -48,7 +48,7 @@
               <a href="/main__page.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item">
-              <a href="/review.html" class="breadcrumbs__link breadcrumbs_link_active">Услуги</a>
+              <a href="./review.html" class="breadcrumbs__link breadcrumbs_link_active">Услуги</a>
             </li>
           </ul>
         </nav>
@@ -60,7 +60,7 @@
           <li class="services__item">
             <a href="" class="services__service service">
               <div class="service__img">
-                <img src="/img/content/service/key.jpg" alt="car keys" class="service__img-elem">
+                <img src="../img/content/service/key.jpg" alt="car keys" class="service__img-elem">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Автокредит под 17% годовых
@@ -82,7 +82,7 @@
           <li class="services__item">
             <a href="" class="services__service service">
               <div class="service__img">
-                <img src="/img/content/service/couple.jpg" alt="couple" class="service__img-elem">
+                <img src="../img/content/service/couple.jpg" alt="couple" class="service__img-elem">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Ипотека под 9% годовых
@@ -120,42 +120,42 @@
         <ul class="inner-section__partners partners">
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/yandex.png" alt="yandex__logo">
+              <img src="./img/icons/partners/yandex.png" alt="yandex__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/rambler.png" alt="rambler__logo">
+              <img src="./img/icons/partners/rambler.png" alt="rambler__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/tinkoff.png" alt="tinkoff__logo">
+              <img src="./img/icons/partners/tinkoff.png" alt="tinkoff__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/sberbank.png" alt="sberbank__logo">
+              <img src="./img/icons/partners/sberbank.png" alt="sberbank__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/renessans.png" alt="vtb__logo">
+              <img src="./img/icons/partners/renessans.png" alt="vtb__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/vtb.png" alt="renessans__logo">
+              <img src="./img/icons/partners/vtb.png" alt="renessans__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/western.png" alt="openbank__logo">
+              <img src="./img/icons/partners/western.png" alt="openbank__logo">
             </a>
           </li>
           <li class="partners__item">
             <a href="" class="partners__link">
-              <img src="/img/icons/partners/openbank.png" alt="western__logo">
+              <img src="./img/icons/partners/openbank.png" alt="western__logo">
             </a>
           </li>
         </ul>
@@ -165,7 +165,7 @@
       <div class="container footer__inner-container">
         <div class="footer__column">
           <a href="/index.html" class="footer__logo logo">
-            <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+            <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
           </a>
           <nav class="footer__menu menu">
             <ul class="menu__list">
