--- a/main__page.html
+++ b/main__page.html
@@ -56,7 +56,7 @@
         <ul class="best-offers__list offers">
           <li class="offers__item offer offers__item_theme_grey">
             <div class="offer__header">
-              <img src="/img/icons/cards/card_grey.png" alt="cardgrey" class="offer__img">
+              <img src="./img/icons/cards/card_grey.png" alt="cardgrey" class="offer__img">
             </div>
             <div class="offer__content">
               <h3 class="offer__title">Карта "Базовая"</h3>
@@ -77,7 +77,7 @@
           </li>
           <li class="offers__item offer offers__item_theme_blue">
             <div class="offer__header">
-              <img src="/img/icons/cards/card_blue.png" alt="cardblue" class="offer__img">
+              <img src="./img/icons/cards/card_blue.png" alt="cardblue" class="offer__img">
             </div>
             <div class="offer__content">
               <h3 class="offer__title">Карта "Оптима"</h3>
@@ -98,7 +98,7 @@
           </li>
           <li class="offers__item offer offers__item_theme_gold">
             <div class="offer__header">
-              <img src="/img/icons/cards/card_gold.png" alt="cardgold" class="offer__img">
+              <img src="./img/icons/cards/card_gold.png" alt="cardgold" class="offer__img">
             </div>
             <div class="offer__content">
               <h3 class="offer__title">Карта "Платинум"</h3>
@@ -127,7 +127,7 @@
           <li class="news__item single-news">
             <a href="#" class="news__link">
               <div class="single-news__more-news">
-                <img src="/img/content/news/phone.jpg" alt="мобильное приложение" class="news-elem">
+                <img src="./img/content/news/phone.jpg" alt="мобильное приложение" class="news-elem">
               </div>
               <div class="single-news__news-desk">
                 <time class="single-news__actual-date">
@@ -143,7 +143,7 @@
           <li class="news__item single-news">
             <a href="#" class="news__link">
               <div class="single-news__more-news">
-                <img src="/img/content/news/mountains.jpg" alt="мобильное приложение" class="news-elem">
+                <img src="./img/content/news/mountains.jpg" alt="мобильное приложение" class="news-elem">
               </div>
               <div class="single-news__news-desk">
                 <time class="single-news__actual_date">
@@ -191,7 +191,7 @@
         <div class="footer__container-section">
           <div class="footer__column">
             <a href="/index.html" class="footer__logo logo">
-              <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+              <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="footer__menu menu">
               <ul class="menu__list">
