--- a/main__page.html
+++ b/main__page.html
@@ -43,7 +43,7 @@
         </header>
         <div class="hero__intro">
           <div class="hero__content content">
-            <h1 class="content__title">Не отказывай себе в желании быть первым или вторым или третьим</h1>
+            <h1 class="content__title">Не отказывай себе в желании быть первым</h1>
             <p class="content__description">Банк с львиным характером</p>
             <a href="" class="content__btn btn">Подробнее</a>
           </div>
