--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         <header class="top-line__header header">
           <div class="header__column">
             <a href="./index.html" class="header__logo logo">
-              <img src="../img/logo.png" alt="lion bank logo" class="logo__img">
+              <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="header__menu menu">
               <ul class="menu__list">
@@ -60,7 +60,7 @@
           <li class="services__item">
             <a href="" class="services__service service">
               <div class="service__img">
-                <img src="../img/content/service/key.jpg" alt="car keys" class="service__img-elem">
+                <img src="./img/content/service/key.jpg" alt="car keys" class="service__img-elem">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Автокредит под 17% годовых
@@ -82,7 +82,7 @@
           <li class="services__item">
             <a href="" class="services__service service">
               <div class="service__img">
-                <img src="../img/content/service/couple.jpg" alt="couple" class="service__img-elem">
+                <img src="./img/content/service/couple.jpg" alt="couple" class="service__img-elem">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Ипотека под 9% годовых
