--- a/main__page.html
+++ b/main__page.html
@@ -195,9 +195,9 @@
             </a>
             <nav class="footer__menu menu">
               <ul class="menu__list">
-                <li class="menu__item menu_active_item"> <a href="/main__page.html" class="menu__link">Главная</a></li>
-                <li class="menu__item"> <a href="/service.html" class="menu__link">Услуги</a></li>
-                <li class="menu__item"> <a href="/review.html" class="menu__link">Отзывы</a></li>
+                <li class="menu__item menu_active_item"> <a href="./main__page.html" class="menu__link">Главная</a></li>
+                <li class="menu__item"> <a href="./service.html" class="menu__link">Услуги</a></li>
+                <li class="menu__item"> <a href="./review.html" class="menu__link">Отзывы</a></li>
               </ul>
             </nav>
           </div>
