--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         <header class="top-line__header header">
           <div class="header__column">
             <a href="./index.html" class="header__logo logo">
-              <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+              <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="header__menu menu">
               <ul class="menu__list">
@@ -169,9 +169,9 @@
           </a>
           <nav class="footer__menu menu">
             <ul class="menu__list">
-              <li class="menu__item"> <a href="/main__page.html" class="menu__link">Главная</a></li>
-              <li class="menu__item   menu_active_item"> <a href="/service.html" class="menu__link">Услуги</a></li>
-              <li class="menu__item"> <a href="/review.html" class="menu__link">Отзывы</a>
+              <li class="menu__item"> <a href="./main__page.html" class="menu__link">Главная</a></li>
+              <li class="menu__item   menu_active_item"> <a href="./service.html" class="menu__link">Услуги</a></li>
+              <li class="menu__item"> <a href="./review.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
