--- a/service.html
+++ b/service.html
@@ -45,7 +45,7 @@
         <nav class="top-line__breadcrumbs breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a href="/main__page.html" class="breadcrumbs__link">Главная</a>
+              <a href="./main__page.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item">
               <a href="./review.html" class="breadcrumbs__link breadcrumbs_link_active">Услуги</a>
