--- a/main__page.html
+++ b/main__page.html
@@ -190,7 +190,7 @@
       <div class="container footer__container">
         <div class="footer__container-section">
           <div class="footer__column">
-            <a href="/index.html" class="footer__logo logo">
+            <a href="./index.html" class="footer__logo logo">
               <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
             </a>
             <nav class="footer__menu menu">
