--- a/review.html
+++ b/review.html
@@ -45,10 +45,10 @@
         <nav class="top-line__breadcrumbs breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a href="/main__page.html" class="breadcrumbs__link">Главная</a>
+              <a href="./main__page.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item">
-              <a href="/review.html" class="breadcrumbs__link breadcrumbs_link_active">Отзывы</a>
+              <a href="./review.html" class="breadcrumbs__link breadcrumbs_link_active">Отзывы</a>
             </li>
           </ul>
         </nav>
@@ -278,8 +278,8 @@
     <footer class="footer">
       <div class="container footer__inner-container">
         <div class="footer__column">
-          <a href="/index.html" class="footer__logo logo">
-            <img src="/img/logo.png" alt="lion bank logo" class="logo__img">
+          <a href="./index.html" class="footer__logo logo">
+            <img src="./img/logo.png" alt="lion bank logo" class="logo__img">
           </a>
           <nav class="footer__menu menu">
             <ul class="menu__list">
